frontend/test/should_fail/simple_eval_003.grg
rule r
{
	modify {
		eval {
			yield x = 1;
		}
		---
		def var x:int = 0;
	}
}